refactor(Register) : 인덱스를 통해 get이 아닌, getFirst와 getLast 사용